Hack to fix the page 'shifting' when the scrollbar appears/disappears.

--- a/app/assets/stylesheets/angular/clients.css.scss
+++ b/app/assets/stylesheets/angular/clients.css.scss
@@ -167,8 +167,6 @@ $client-form-nav-padding: 50px;
 }
 
 #toolbar {
-  @include transition();
-
   position: fixed;
 
   bottom: 0;
